[package]
name = "common"
version = "0.1.0"
description = "Common utilities and types for the Solana Option Programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "common"
path = "src/lib.rs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
statrs = "0.16"
rust_decimal = "1.32"

[profile.release]
overflow-checks = true
